feat: fix query on user table, cron-job

--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "dev": "bun run --watch src/index.ts"
   },
   "dependencies": {
+    "@elysiajs/cron": "^1.2.0",
     "elysia": "latest",
     "logestic": "^1.2.4",
     "pg": "^8.13.1",
