--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@prisma/client": "6.7.0",
     "elysia": "latest",
     "logestic": "^1.2.4",
+    "nanoid": "^5.1.5",
     "pg": "^8.15.6",
     "preact": "^10.26.6"
   },
