--- a/.env.example
+++ b/.env.example
@@ -6,3 +6,7 @@ DB_HOST=
 DB_DATABASE= 
 DB_PASSWORD= 
 DB_PORT= 
+
+
+# DATABASE_URL="postgresql://johndoe:randompassword@localhost:5432/mydb?schema=public"
+SALT= 
