--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@elysiajs/cron": "^1.3.0",
     "@prisma/client": "^6.9.0",
+    "argon2": "^0.43.0",
     "elysia": "latest",
     "logestic": "^1.2.4",
     "nanoid": "^5.1.5",
